--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.21.0
 olefile==0.44
-opencv-python==4.2.0.32
+opencv-python-headless
 Pillow==9.0.0
 python-engineio==3.8.2.post1
 python-socketio==1.7.7
